<!-- (c) https://github.com/MontiCore/monticore -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>


  <!-- == PROJECT COORDINATES ============================================= -->

  <groupId>de.monticore.lang.monticar</groupId>
  <artifactId>embedded-montiarc-emadl-generator</artifactId>
  <version>0.4.8-SNAPSHOT</version>

  <!-- == PROJECT DEPENDENCIES ============================================= -->

  <properties>

    <!-- .. SE-Libraries .................................................. -->

      <emadl.version>0.5.0-SNAPSHOT</emadl.version>
      <CNNTrain.version>0.4.4-SNAPSHOT</CNNTrain.version>
      <CNNArch.version>0.5.0-SNAPSHOT</CNNArch.version>
      <cnnarch-generator.version>0.4.5</cnnarch-generator.version>
      <cnnarch-mxnet-generator.version>0.4.5</cnnarch-mxnet-generator.version>
      <cnnarch-caffe2-generator.version>0.4.5</cnnarch-caffe2-generator.version>
      <cnnarch-gluon-generator.version>0.5.0-SNAPSHOT</cnnarch-gluon-generator.version>
      <cnnarch-tensorflow-generator.version>0.4.5</cnnarch-tensorflow-generator.version>

      <!-- .. Libraries .................................................. -->
        <guava.version>25.1-jre</guava.version>
        <junit.version>4.13.1</junit.version>
        <logback.version>1.1.2</logback.version>
        <jscience.version>4.3.1</jscience.version>

        <!-- .. Plugins ....................................................... -->
        <assembly.plugin>2.5.4</assembly.plugin>
        <compiler.plugin>3.3</compiler.plugin>
        <source.plugin>2.4</source.plugin>
        <shade.plugin>2.4.3</shade.plugin>
        <jacoco.plugin>0.8.1</jacoco.plugin>

    <!-- Classifiers -->
    <grammars.classifier>grammars</grammars.classifier>
    <cli.classifier>cli</cli.classifier>

    <!-- .. Misc .......................................................... -->
    <java.version>1.8</java.version>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

    <dependencies>

        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.7.1</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>cnnarch-generator</artifactId>
            <version>${cnnarch-generator.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>cnnarch-mxnet-generator</artifactId>
            <version>${cnnarch-mxnet-generator.version}</version>
        </dependency>

		<dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>cnnarch-gluon-generator</artifactId>
            <version>${cnnarch-gluon-generator.version}</version>
        </dependency>

		<dependency>
			<groupId>de.monticore.lang.monticar</groupId>
            <artifactId>cnnarch-tensorflow-generator</artifactId>
            <version>${cnnarch-tensorflow-generator.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>cnnarch-caffe2-generator</artifactId>
            <version>${cnnarch-caffe2-generator.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>cnn-train</artifactId>
            <version>${CNNTrain.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>cnn-arch</artifactId>
            <version>${CNNArch.version}</version>
        </dependency>

        <dependency>
            <groupId>de.monticore.lang.monticar</groupId>
            <artifactId>embedded-montiarc-deeplearning</artifactId>
            <version>${emadl.version}</version>
        </dependency>


        <!-- .. Test Libraries ............................................... -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jscience</groupId>
            <artifactId>jscience</artifactId>
            <version>${jscience.version}</version>
        </dependency>

    </dependencies>


  <!-- == PROJECT BUILD SETTINGS =========================================== -->

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.1</version>
      </plugin>

        <!-- Test coverage -->
        <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco.plugin}</version>
            <executions>
                <execution>
                    <id>pre-unit-test</id>
                    <goals>
                        <goal>prepare-agent</goal>
                    </goals>
                </execution>
                <execution>
                    <id>post-unit-test</id>
                    <phase>test</phase>
                    <goals>
                        <goal>report</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
      <!-- Other Configuration -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler.plugin}</version>
        <configuration>
          <useIncrementalCompilation>true</useIncrementalCompilation>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>jar-with-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>de.monticore.lang.monticar.emadl.generator.EMADLGeneratorCli</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Source Jar Configuration -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${source.plugin}</version>
        <executions>
          <execution>
            <id>create source jar</id>
            <phase>package</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
            <configuration>
              <excludeResources>false</excludeResources>
              <includes>
                <include>**/*.java</include>
                <include>**/*.ftl</include>
              </includes>
            </configuration>
          </execution>
        </executions>
      </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.3.0</version>
                <configuration>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <format>xml</format>
                    <maxmem>256m</maxmem>
                    <!-- aggregated reports for multi-module projects -->
                    <aggregate>true</aggregate>
                    <check/>
                </configuration>
</plugin>
    </plugins>
  </build>


    <distributionManagement>
        <repository>
            <id>se-nexus</id>
            <url>https://nexus.se.rwth-aachen.de/content/repositories/embeddedmontiarc-releases/</url>
        </repository>
        <snapshotRepository>
            <id>se-nexus</id>
            <url>https://nexus.se.rwth-aachen.de/content/repositories/embeddedmontiarc-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>

